--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 @import url('navigation.css');
 @import url('layouts.css');
 @import url('footer.css');
+@import url('accessibility.css');
 
 /* ==========================================================================
    FONTES EXTERNAS
